Add compression to the config